合并本地优化代码：ShutdownHook、服务隔离、KeepAlive伪装、HTTP加强、cloudflared CGo封装